--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ idna==3.10
 ipykernel==6.29.5
 ipython==8.31.0
 jedi==0.19.2
+joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kagglehub==0.3.6
@@ -24,6 +25,7 @@ numpy==2.2.0
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
+patsy==1.0.1
 pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
@@ -37,10 +39,13 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 pyzmq==26.2.0
 requests==2.32.3
+scikit-learn==1.6.0
 scipy==1.14.1
 seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
+statsmodels==0.14.4
+threadpoolctl==3.5.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
