--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.4
 asttokens==3.0.0
 certifi==2024.12.14
 charset-normalizer==3.4.0
+cmdstanpy==1.2.5
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
@@ -9,7 +10,9 @@ debugpy==1.8.11
 decorator==5.1.1
 executing==2.1.0
 fonttools==4.55.3
+holidays==0.63
 idna==3.10
+importlib_resources==6.4.5
 ipykernel==6.29.5
 ipython==8.31.0
 jedi==0.19.2
@@ -30,6 +33,7 @@ pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
+prophet==1.1.6
 psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -44,6 +48,7 @@ scipy==1.14.1
 seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
+stanio==0.5.1
 statsmodels==0.14.4
 threadpoolctl==3.5.0
 tornado==6.4.2
